# distirbuted-tracing-fastapi

microservice1/: main.py  pyproject.toml
microservice2/: docker-compose.yaml  main.py  prometheus.yml  pyproject.toml  test_main.http
